Have refactored method within setInterval

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,15 +1,3 @@
-@-webkit-keyframes fall {
-  to {
-    margin-top: 900px;
-  }
-}
-
-@keyframes fall {
-  to {
-    margin-top: 900px;
-  }
-}
-
 * {
   padding: 0;
   margin: 0;
@@ -26,12 +14,9 @@ body {
 }
 
 .drop {
-  background: #fff;
-  width: 1px;
-  height: 89px;
   position: absolute;
-  bottom: 200px;
-  -webkit-animation: fall 603ms linear infinite;
-          animation: fall 603ms linear infinite;
+  background: #d5dadf;
+  height: 80px;
+  width: 1px;
 }
 /*# sourceMappingURL=style.css.map */
