--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -1,8 +1,3 @@
-@keyframes fall{
-    to{
-        margin-top:900px;
-    }
-}
 
 *{
     padding:0;
@@ -18,11 +13,9 @@ body{
 }
 
 .drop{
-    background: #fff;
-    width:1px;
-    height: 89px;
     position: absolute;
-    bottom:200px;
-    animation: fall 603ms linear infinite;
+    background: rgb(213, 218, 223);
+    height:80px;
+     width:1px;
 }
 
